@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.3.6"
 #define RUBY_RELEASE_DATE "2017-11-30"
-#define RUBY_PATCHLEVEL 379
+#define RUBY_PATCHLEVEL 380
 
 #define RUBY_RELEASE_YEAR 2017
 #define RUBY_RELEASE_MONTH 11
